[package]
name = "kvapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
serde = { version = "1", features = ["derive"] }
# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
